@startuml
hide circle
skinparam linetype ortho
skinparam classAttributeIconSize 0

' Central per-question result summary
entity "QuestionResult" as QuestionResult {
  *id : UUID <<PK>>
  --
  survey_id : UUID <<external>>
  survey_title : varchar
  question_id : UUID <<external>>
  question_text : text
  question_type : enum('single', 'range', 'text')
  total_answers : int
  last_updated : datetime
}

' Per-option aggregation for single choice
entity "SingleChoiceResult" as SingleChoiceResult {
  *id : UUID <<PK>>
  --
  question_result_id : UUID  -- FK to QuestionResult
  option_id : UUID <<external>>
  option_text : text
  vote_count : int
  vote_percent : float
}

' Aggregated stats for range questions
entity "RangeQuestionResult" as RangeQuestionResult {
  *id : UUID <<PK>>
  --
  question_result_id : UUID  -- FK to QuestionResult
  avg_value : float
  std_deviation : float
}

' Relationships
QuestionResult ||--o{ SingleChoiceResult : options
QuestionResult ||--|| RangeQuestionResult
@enduml
